[project]
name = "lactate-thresholds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bart6114", email = "bart@dataroots.io" }
]
requires-python = ">=3.12.3"
dependencies = [
    "pandas>=2.2.3",
]

[project.scripts]
lactate-thresholds = "lactate_thresholds:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]
