[project]
name = "lactate-thresholds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bart6114", email = "bart@dataroots.io" }
]
requires-python = ">=3.12.3"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pwlf>=2.3.0",
    "pydantic>=2.10.3",
    "ruptures>=1.1.9",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[project.scripts]
lactate-thresholds = "lactate_thresholds:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[tool.pytest.ini_options]
log_level = "INFO"
log_cli = true
