[project]
name = "lactate-thresholds"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bart6114", email = "bart@dataroots.io" }
]
requires-python = ">=3.12.3"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pwlf>=2.3.0",
    "pydantic>=2.10.3",
    "ruptures>=1.1.9",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.40.2",
]

[project.scripts]
lt_app = "lactate_thresholds:app.start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[tool.pytest.ini_options]
log_level = "INFO"
log_cli = true

[tool.hatch.version]
path = "src/lactate_thresholds/__about__.py"